# OpenSplat

./: .gitignore  CMakeLists.txt  README.md  llms.txt  mkdocs.yml  opensplat_linux_cuda_optimization.ipynb
.github/workflows/: docker.yml  docs.yml  macos.yml  resource-aware.yml  ubuntu-cpu.yml  ubuntu.yml
docs/: README.md  architecture.md  design.md  getting_started.md  mindmap.md  project_context.md  repo_organization.md  testing.md
man/: opensplat.1.in
scripts/: README.md  bench_resource.py  benchmark.sh  build.sh  docker-build.sh  fetch_test_data.sh  make_chunks.py  smoke.sh
src/app/: opensplat.cpp
src/common/: cv_utils.cpp  cv_utils.hpp  resource.cpp  resource.hpp
src/io/: input_data.cpp  input_data.hpp
src/model/: model.cpp  model.hpp
test/: CMakeLists.txt  README.md
test/fixtures/: .gitkeep
test/integration/: test_pipeline.cpp  test_pipeline_cuda.cpp
test/regression/: README.md  test_regression_math.cpp  test_regression_resource.cpp
test/unit/: test_cv_utils.cpp  test_kdtree.cpp  test_optim_scheduler.cpp  test_resource.cpp  test_ssim.cpp  test_tensor_math.cpp  test_utils.cpp
